@@ -1,3 +1,10 @@
+2002-08-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* comm.test: Removed writing of file ~/foo, was debugging
+	  code. Changed creation and usage of file 'spawn' to allow an
+	  arbitrary setting of -tmpdir. Fixes SF Bug #589225 reported by
+	  Don Porter <dgp@users.sourceforge.net>.
+
 2002-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* Bumped version number to 4.0 per request by John LoVerso.
